--- a/README
+++ b/README
@@ -1,21 +1,20 @@
                                                               -*- org -*-
 Mes -- Maxwell Equations of Software
 
-[[https://gitlab.com/janneke/mes][Mes]] aims to create full source bootstrapping for [[https://www.gnu.org/software/guix][GuixSD]] as part of the
-[[http://bootstrappable.org][bootstrappable builds]] effort.
+[[https://gitlab.com/janneke/mes][Mes]] aims to help create full source bootstrapping for [[https://www.gnu.org/software/guix][GuixSD]] as part
+of the [[http://bootstrappable.org][bootstrappable builds]] effort.
 
-It currently consists of a mutual self-hosting [close to Guile-]
-Scheme interpreter prototype in C and a Nyacc-based C compiler in
-[Guile] Scheme.  This C prototype will be simplified to be transpiled
-by [[https://github.com/oriansj/m2-planet][M2-Planet]].
+It currently consists of a mutual self-hosting Scheme interpreter
+prototype written in C and a Nyacc-based C compiler written in Scheme.
+This C prototype is being simplified to be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
 
 The Scheme interpreter prototype (mes.c) has a Garbage Collector, a
 library of loadable Scheme modules-- notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]],
 Pre-R6RS [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][portable syntax-case]] with R7RS ellipsis, Matt Wette's [[https://www.nongnu.org/nyacc][Nyacc]],
 Guile's [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][PEG]] --and test suite just barely enough to support a simple
-REPL (repl.mes) and simple C-compiler MesCC (mescc.mes).
+REPL and simple C-compiler: MesCC.
 
-MesCC can compile a [[https://gitlab.com/janneke/tinycc][modified TinyCC]] that is close to being
+Mes+MesCC can compile a [[https://gitlab.com/janneke/tinycc][modified TinyCC]] that is close to being
 self-hosting.  A GNU Ccc-compiled tcc is [[https://lists.gnu.org/archive/html/tinycc-devel/2017-05/msg00103.html][known]] to compile GCC.
 
 Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%2525201.5%252520Programmers%252520Manual.pdf][LISP-1.5]] -- John
@@ -50,9 +49,10 @@ General Public Licence version 3 or later.  See the file COPYING.
 
 * REPL it
 
-   scripts/repl.mes
+   src/mes.gcc        # default (64 bit) gcc-compiled
+   src/mes.mlibc-gcc  # 32 bit, gcc -nostdlib
+   src/mes            # 32 bit, bootstrapped, mes.M1+MesCC-compiled
 
 * MesCC compiler
 
-   scripts/mescc.mes scaffold/main.c > a.out
-
+   scripts/mescc -c scaffold/main.c
