--- a/README
+++ b/README
@@ -15,7 +15,8 @@ Guile's [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.
 REPL and simple C-compiler: MesCC.
 
 Mes+MesCC can compile a only [[https://gitlab.com/janneke/tinycc][lightly modified TinyCC]] that is
-self-hosting.  A GNU Ccc-compiled tcc is [[https://lists.gnu.org/archive/html/tinycc-devel/2017-05/msg00103.html][known]] to compile GCC.
+self-hosting.  Using the Mes C library, this tcc can now build the
+gnutools triplet: binutils-2.14, gcc-2.95.3, glibc-2.2.5.
 
 Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%2525201.5%252520Programmers%252520Manual.pdf][LISP-1.5]] -- John
 McCarthy page 13, GNU Guix's source/binary packaging transparency and
@@ -30,9 +31,8 @@ Jeremiah Orians's stage0 ~300 byte self-hosting hex assembler.
 [6] https://www.nongnu.org/nyacc
 [7] https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html
 [8] https://gitlab.com/janneke/tinycc
-[9] https://lists.gnu.org/archive/html/tinycc-devel/2017-05/msg00103.html
-[10] http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf
-[11] https://github.com/oriansj/stage0
+[9] http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf
+[10] https://github.com/oriansj/stage0
 
 Mes is free software, it is distributed under the terms of the GNU
 General Public Licence version 3 or later.  See the file COPYING.
