--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,8 @@ All files except the imported files listed below
 Jeremiah Orians <jeremiah@pdp10.guru>
 lib/libc.c (fopen)
 
-
+Han-Wen Nienhuys <hanwen@xs4all.nl>
+lib/libc+tcc.c (_memmem, memmem)
 
 List of imported files
 
