--- a/AUTHORS
+++ b/AUTHORS
@@ -8,7 +8,11 @@ lib/libc.c (fopen)
 Han-Wen Nienhuys <hanwen@xs4all.nl>
 lib/libc+tcc.c (_memmem, memmem)
 
+
 List of imported files
+
+D A Gwyn
+lib/alloca.c
 
 Based on Guile ECMAScript
 module/language/c/lexer.mes
