--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ All files except the imported files listed below
 
 Jeremiah Orians <jeremiah@pdp10.guru>
 lib/libc.c (fopen)
+scaffold/tests/98-fopen.c
 
 Han-Wen Nienhuys <hanwen@xs4all.nl>
 lib/libc+tcc.c (_memmem, memmem)
