--- a/README
+++ b/README
@@ -6,7 +6,7 @@ of the [[http://bootstrappable.org][bootstrappable builds]] effort.
 
 It currently consists of a mutual self-hosting Scheme interpreter
 prototype written in C and a Nyacc-based C compiler written in Scheme.
-This C prototype is being simplified to be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
+This C prototype is [[https://github.com/oriansj/mes-m2][being simplified]] to be transpiled by [[https://github.com/oriansj/m2-planet][M2-Planet]].
 
 The Scheme interpreter prototype (mes.c) has a Garbage Collector, a
 library of loadable Scheme modules-- notably Dominique Boucher's [[https://github.com/schemeway/lalr-scm][LALR]],
@@ -14,25 +14,14 @@ Pre-R6RS [[https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html][p
 Guile's [[https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html][PEG]] --and test suite just barely enough to support a simple
 REPL and simple C-compiler: MesCC.
 
-Mes+MesCC can compile a only [[https://gitlab.com/janneke/tinycc][lightly modified TinyCC]] that is
-self-hosting.  Using the Mes C library, this tcc can now build the
-gnutools triplet: binutils-2.14, gcc-2.95.3, glibc-2.2.5.
+Mes+MesCC can compile an only [[https://gitlab.com/janneke/tinycc][lightly patched TinyCC]] that is
+self-hosting.  Using this tcc and the Mes C library we now have a
+reduced-binary-seed bootstrap for the gnutools triplet: glibc-2.2.5,
+binutils-2.20.1, gcc-4.1.0.
 
 Mes is inspired by The Maxwell Equations of Software: [[http://www.softwarepreservation.org/projects/LISP/book/LISP%2525201.5%252520Programmers%252520Manual.pdf][LISP-1.5]] -- John
 McCarthy page 13, GNU Guix's source/binary packaging transparency and
-Jeremiah Orians's stage0 ~300 byte self-hosting hex assembler.
-
-[0] https://gitlab.com/janneke/mes
-[1] https://www.gnu.org/software/guix
-[2] http://bootstrappable.org
-[3] https://github.com/oriansj/m2-planet
-[4] https://github.com/schemeway/lalr-scm
-[5] https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html
-[6] https://www.nongnu.org/nyacc
-[7] https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html
-[8] https://gitlab.com/janneke/tinycc
-[9] http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf
-[10] https://github.com/oriansj/stage0
+Jeremiah Orians's [[https://github.com/oriansj/stage0][stage0]] ~500 byte self-hosting hex assembler.
 
 Mes is free software, it is distributed under the terms of the GNU
 General Public Licence version 3 or later.  See the file COPYING.
@@ -56,3 +45,20 @@ General Public Licence version 3 or later.  See the file COPYING.
 * MesCC compiler
 
    scripts/mescc -c scaffold/main.c
+
+* Bugs
+
+    Please send Mes bug reports to janneke@gnu.org.
+
+[0] https://gitlab.com/janneke/mes
+[1] https://www.gnu.org/software/guix
+[2] http://bootstrappable.org
+[3] https://github.com/oriansj/mes-m2
+[4] https://github.com/oriansj/m2-planet
+[5] https://github.com/schemeway/lalr-scm
+[6] https://www.cs.indiana.edu/chezscheme/syntax-case/old-psyntax.html
+[7] https://www.nongnu.org/nyacc
+[8] https://www.gnu.org/software/guile/docs/master/guile.html/PEG-Parsing.html
+[9] https://gitlab.com/janneke/tinycc
+[10] http://www.softwarepreservation.org/projects/LISP/book/LISP%25201.5%2520Programmers%2520Manual.pdf
+[11] https://github.com/oriansj/stage0
