--- a/INSTALL
+++ b/INSTALL
@@ -17,7 +17,7 @@ similar way.
     guix environment --system=i686-linux -l guix.scm #32 bit only
 
 *** Other GNU/Linux
-  - [[https://github.com/oriansj/mescc-tools][mescc-tools]], 0.4 is known to work.
+  - [[https://github.com/oriansj/mescc-tools][mescc-tools]], 0.5 is known to work.
   - [[https://savannah.gnu.org/projects/nyacc][Nyacc]], [[https://gitlab.com/janneke/nyacc][patched Nyacc]] 0.80.42 is known to work.
   - GNU Gcc, 4.9.3 is known to work.
   - GNU Guile, version 2.0.12 or is know to work.
@@ -42,13 +42,13 @@ similar way.
 
 * Bootstrap build
 
-The bootstrap build is being prototyped in GuixSD, see
+The bootstrap build is being developed in GuixSD, see
 https://gitlab.com/janneke/guix/blob/wip-bootstrap/gnu/packages/mes.scm
 
 ** Prerequisites
-  - [[https://github.com/oriansj/mescc-tools][mescc-tools]], 0.4 is known to work.
+  - [[https://github.com/oriansj/mescc-tools][mescc-tools]], 0.5 is known to work.
   - [[https://savannah.gnu.org/projects/nyacc][Nyacc]], [[https://gitlab.com/janneke/nyacc][patched Nyacc]] 0.80.42 is known to work.
-  - [[https://github.com/oriansj/mescc-tools][mes-seed]], 0.15 is known to work.
+  - [[https://gitlab.com/janneke/mes-seed][mes-seed]], 0.16 is known to work.
 
 ** Build it
    <setup environment, e.g. prefix, MES_SEED>
