build: Use GNU style lower case directory configure variable naming.
* GNUmakefile: Use GNU style lower case directory configure variable naming.
* HACKING: Likewise.
* INSTALL: Likewise.
* build-aux/build-cc.sh: Likewise.
* build-aux/build-cc32.sh: Likewise.
* build-aux/cc-mes.sh: Likewise.
* build-aux/cc.sh: Likewise.
* build-aux/cc32-mes.sh: Likewise.
* build-aux/export.make: Likewise.
* build-aux/setup-mes.sh: Likewise.
* build.sh: Likewise.
* check.sh: Likewise.
* configure: Likewise.
* doc/mes.texi: Likewise.
* install.sh: Likewise.
* scripts/mescc: Likewise.

--- a/HACKING
+++ b/HACKING
@@ -25,7 +25,7 @@ To help development we assume ./configure sets these variables for make
    HEX2   -- hex2
    MES    -- unset
    M1     -- M1
-   PREFIX -- ""
+   prefix -- ""
 
 Mes is supposed to serve as a full equivalent for Guile, however Mes
 ~30 times slower than Guile.  That's why we usually don't use Mes
